chore: resolve minor issues